--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "taichi>=1.7.0; platform_machine == 'x86_64'",
     "numpy>=1.24.0",
+    "scipy>=1.10.0",
     "pillow>=10.0.0",
     "imageio[ffmpeg]>=2.37.2",
     "opencv-python>=4.13.0.92",
