--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ __pycache__/
 build/
 dist/
 wheels/
+output/
 *.egg-info
 
 # Virtual environments
@@ -11,3 +12,5 @@ wheels/
 *.png
 *.mp4
 *.txt
+*.pkl
+*.csv
