--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "imageio[ffmpeg]>=2.37.2",
     "opencv-python>=4.13.0.92",
     "matplotlib>=3.10.8",
+    "cma>=4.0.0",
 ]
 
 [project.scripts]
