--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,15 +3,26 @@ name = "jellys"
 version = "0.1.0"
 description = "2D differentiable MPM simulation for jellyfish-inspired soft robot co-design"
 readme = "README.md"
-requires-python = ">=3.10"
+requires-python = ">=3.12"
 dependencies = [
-    "taichi>=1.7.0; platform_machine == 'x86_64'",
     "numpy>=1.24.0",
     "scipy>=1.10.0",
     "pillow>=10.0.0",
+    "matplotlib>=3.10.8",
+    "flask>=3.0.0",
+]
+
+[project.optional-dependencies]
+simulation = [
+    "taichi>=1.7.0",
     "imageio[ffmpeg]>=2.37.2",
     "opencv-python>=4.13.0.92",
-    "matplotlib>=3.10.8",
+    "cma>=4.0.0",
+]
+all = [
+    "taichi>=1.7.0",
+    "imageio[ffmpeg]>=2.37.2",
+    "opencv-python>=4.13.0.92",
     "cma>=4.0.0",
 ]
 
